// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CDropdownMenu customize 1`] = `
<div>
  <div
    class="dropdown"
  >
    <div
      class="dropdown-menu show bazinga"
      role="menu"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`loads and displays CDropdownMenu component 1`] = `
<div>
  <ul
    class="dropdown-menu"
    data-coreui-popper="static"
    role="menu"
  />
</div>
`;
